// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginItem > (Snapshot) renders disabled state 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row gap-2"
  >
    <div
      aria-busy="false"
      class="border-border text-foreground flex h-full w-full rounded-md border-(length:--border-width) p-4 bg-background-secondary shadow-shadow opacity-30 relative cursor-default overflow-hidden transition-opacity duration-250"
      data-testid="plugin-item"
    >
      <div
        class="flex w-full flex-wrap items-start gap-4"
      >
        <div
          class="border-border text-foreground flex rounded-md border-(length:--border-width) bg-background-secondary shadow-none h-12 w-12 flex-shrink-0 items-center justify-center overflow-hidden p-0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-music"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18V5l12-2v13"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <circle
              cx="18"
              cy="16"
              r="3"
            />
          </svg>
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <h3
            class="text-foreground inline-flex items-center gap-4 text-lg leading-tight font-bold select-none"
            data-testid="plugin-name"
          >
            Disabled Plugin
          </h3>
          <p
            class="text-foreground-secondary mt-1 text-sm select-none"
            data-testid="plugin-author"
          >
            by Nuclear Team
          </p>
          <p
            class="text-foreground mt-2 text-sm leading-relaxed select-none"
            data-testid="plugin-description"
          >
            This plugin is currently disabled.
          </p>
        </div>
        <div
          class="flex h-full shrink-0 flex-col items-start justify-center sm:w-auto sm:items-end"
        />
      </div>
    </div>
    <div
      class="flex flex-col justify-between gap-2"
    />
  </div>
</DocumentFragment>
`;

exports[`PluginItem > (Snapshot) renders rightAccessory content 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row gap-2"
  >
    <div
      aria-busy="false"
      class="border-border text-foreground flex h-full w-full rounded-md border-(length:--border-width) p-4 bg-background-secondary shadow-shadow relative cursor-default overflow-hidden transition-opacity duration-250"
      data-testid="plugin-item"
    >
      <div
        class="flex w-full flex-wrap items-start gap-4"
      >
        <div
          class="min-w-0 flex-1"
        >
          <h3
            class="text-foreground inline-flex items-center gap-4 text-lg leading-tight font-bold select-none"
            data-testid="plugin-name"
          >
            Accessory Plugin
          </h3>
          <p
            class="text-foreground-secondary mt-1 text-sm select-none"
            data-testid="plugin-author"
          >
            by Nuclear Team
          </p>
          <p
            class="text-foreground mt-2 text-sm leading-relaxed select-none"
            data-testid="plugin-description"
          >
            Has accessory on the right.
          </p>
        </div>
        <div
          class="flex h-full shrink-0 flex-col items-start justify-center sm:w-auto sm:items-end"
        >
          <div
            class=""
          >
            <span>
              Accessory
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-between gap-2"
    />
  </div>
</DocumentFragment>
`;

exports[`PluginItem > (Snapshot) renders with all props 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row gap-2"
  >
    <div
      aria-busy="false"
      class="text-foreground flex h-full w-full rounded-md border-(length:--border-width) p-4 bg-background-secondary shadow-shadow ring-accent-orange ring-2 select-none ring-inset relative cursor-default overflow-hidden transition-opacity duration-250 border-accent-red"
      data-testid="plugin-item"
    >
      <div
        class="flex w-full flex-wrap items-start gap-4"
      >
        <div
          class="border-border text-foreground flex rounded-md border-(length:--border-width) bg-background-secondary shadow-none h-12 w-12 flex-shrink-0 items-center justify-center overflow-hidden p-0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-music"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18V5l12-2v13"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <circle
              cx="18"
              cy="16"
              r="3"
            />
          </svg>
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <h3
            class="text-foreground inline-flex items-center gap-4 text-lg leading-tight font-bold select-none"
            data-testid="plugin-name"
          >
            YouTube Music
          </h3>
          <p
            class="text-foreground-secondary mt-1 text-sm select-none"
            data-testid="plugin-author"
          >
            by Nuclear Team
          </p>
          <p
            class="text-foreground mt-2 text-sm leading-relaxed select-none"
            data-testid="plugin-description"
          >
            Stream music directly from YouTube Music with full search and playlist support.
          </p>
        </div>
        <div
          class="absolute -top-4 -left-2"
          data-headlessui-state=""
        >
          <div
            aria-expanded="false"
            class="cursor-pointer"
            data-headlessui-state=""
            id="headlessui-popover-button-:r2:"
          >
            <div
              class="relative flex h-12 w-12 items-center"
            >
              <span
                class="bg-accent-orange border-border inline-flex items-center justify-center rounded-md border-(length:--border-width) p-1 text-xs font-semibold text-black"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-triangle-alert fill-accent-yellow"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex h-full shrink-0 flex-col items-start justify-center sm:w-auto sm:items-end"
        />
        <span
          class="text-foreground-secondary absolute right-4 bottom-2 mt-2 text-sm"
        >
          Loaded in 200ms
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between gap-2"
    >
      <button
        class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none size-8 justify-center"
        data-headlessui-state=""
        data-testid="plugin-action-view-details"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-settings"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
